--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
+        android:background="@mipmap/logo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!--首页的大文字-->
+        <TextView
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/textView"
+            android:layout_width="191dp"
+            android:layout_height="61dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="吐槽百科词典"
+            android:layout_marginTop="15dp"
+            android:textSize="30sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!--首页存放搜索一栏的线性布局-->
+        <LinearLayout
+            android:layout_centerInParent="true"
+            android:layout_width="380dp"
+            android:layout_height="53dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="250dp"
+            android:background="@color/white"
+            android:orientation="horizontal">
+
+            <!--左侧的按钮-->
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="15dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                app:srcCompat="@mipmap/logo1" />
+
+            <!--文字输入处-->
+            <EditText
+                android:id="@+id/editText2"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:ems="10"
+                android:focusable="auto"
+                android:inputType="textPersonName"
+                android:text="Name" />
+
+            <!--右侧的按钮-->
+            <ImageButton
+                android:id="@+id/imageButton2"
+                android:layout_width="15dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                app:srcCompat="@mipmap/sosuo" />
+
+        </LinearLayout>
+
+    <!--底部系统推荐热词-->
+    <com.nex3z.flowlayout.FlowLayout
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="115dp"
+        app:flFlow="true"
+        app:flChildSpacing="8dp"
+        app:flRowSpacing="8dp"
+        android:padding="10dp"
+        android:layout_marginBottom="50dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:background="@drawable/tag_shape"
+            android:text="SUN发大水发撒放砂锅上的" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:background="@drawable/tag_shape"
+            android:text="MON" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:background="@drawable/tag_shape"
+            android:text="SUN" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:background="@drawable/tag_shape"
+            android:text="MON" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:background="@drawable/tag_shape"
+            android:text="SUN" />
+
+    </com.nex3z.flowlayout.FlowLayout>
+</RelativeLayout>
