--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="shadow">#C0BEBE</color>
+    <color name="sortpagetextcolor">#B8000000</color>
+    <color name="sortpagebgcolor">#F2E03D</color>
+    <color name="bgcolor">#B9D9E1EB</color>
 </resources>
