--- a/app/src/main/res/layout/activity_sort_page_next.xml
+++ b/app/src/main/res/layout/activity_sort_page_next.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".SortPageNext">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/backbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="返回"
+            android:background="@color/bgcolor"
+            >
+        </Button>
+    </LinearLayout>
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
