--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:text="吐槽百科词典"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="5dp"
             android:textSize="30sp" />
 
         <!--首页存放搜索一栏的线性布局-->
@@ -33,7 +33,7 @@
 
             <!--左侧的按钮-->
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/imageButton1"
                 android:layout_width="15dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -42,14 +42,15 @@
 
             <!--文字输入处-->
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/editText"
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
                 android:focusable="auto"
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="吐槽热词..."
+                android:text="" />
 
             <!--右侧的按钮-->
             <ImageButton
@@ -64,14 +65,15 @@
 
     <!--底部系统推荐热词-->
     <com.nex3z.flowlayout.FlowLayout
+        android:id="@+id/my_flowLayout"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="115dp"
+        android:layout_height="180dp"
         app:flFlow="true"
         app:flChildSpacing="8dp"
         app:flRowSpacing="8dp"
         android:padding="10dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="100dp"
         >
 
         <TextView
