--- a/app/src/main/res/layout/mine.xml
+++ b/app/src/main/res/layout/mine.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
+        android:src="@mipmap/ic_launcher"
         android:id="@+id/image"
+        android:layout_weight="1"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
@@ -16,10 +18,11 @@
         android:layout_width="wrap_content"/>
 
     <TextView
-        android:id="@+id/moudle"
+        android:id="@+id/module"
+        android:layout_weight="4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="10dp"
-        android:text="@+id/moudle" />
+        android:gravity="center"
+        android:text="fsgsgsf"
+        android:padding="10dp" />
 </LinearLayout>
