--- a/app/src/main/res/layout/activity_sortpage.xml
+++ b/app/src/main/res/layout/activity_sortpage.xml
@@ -1,19 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:id="@+id/sortpage"
+    xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".SortPage"
 android:orientation="vertical">
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="分类"
-        android:textColor="@android:color/holo_blue_light"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:textSize="32sp"/>
+        android:layout_marginBottom="30dp"
+ >
+        <TextView
+            android:id="@+id/sort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:layout_centerInParent="true"
+            android:text="分类"
+            android:textColor="@android:color/holo_blue_light"
+            android:textSize="32sp"></TextView>
+        <ImageView
+            android:id="@+id/increase"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:src="@mipmap/increase_sort"></ImageView>
+    </RelativeLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
