--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,81 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<<<<<<< HEAD
-<<<<<<< HEAD
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:background="@mipmap/logo"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-=======
->>>>>>> 1e535d6d0eb4ffe5e6701d68776938a7b6c204a7
-=======
-=======
+    <!--首页的“标题”-->
+    <TextView
+        android:id="@+id/head_line"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="吐槽百科词典"
+        android:layout_marginTop="10dp"
+        android:textSize="30dp" />
 
->>>>>>> e5ab191e9798d1b2bffccdf6e750b8130373272a
->>>>>>> daac18980c649bbf9ac07d43f42a3e608d7a8a78
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
-        android:background="@mipmap/logo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+    <!--首页存放搜索一栏的线性布局-->
+    <LinearLayout
+        android:id="@+id/find_layout"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="horizontal">
 
-        <!--首页的“标题”-->
-        <TextView
-            android:id="@+id/head_line"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="吐槽百科词典"
-            android:layout_marginTop="10dp"
-            android:textSize="30dp" />
-
-        <!--首页存放搜索一栏的线性布局-->
-        <LinearLayout
-            android:id="@+id/find_layout"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+        <!--左侧的按钮-->
+        <ImageButton
+            android:id="@+id/camera_button"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_weight="1"
             android:background="@color/white"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal">
+            app:srcCompat="@mipmap/camera_button" />
 
-            <!--左侧的按钮-->
-            <ImageButton
-                android:id="@+id/camera_button"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_weight="1"
-                android:background="@color/white"
-                app:srcCompat="@mipmap/camera_button" />
+        <!--文字输入处-->
+        <EditText
+            android:id="@+id/find_edit"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="5"
+            android:textSize="20dp"
+            android:focusable="auto"
+            android:inputType="textPersonName"
+            android:hint="吐槽热词..."
+            android:text="" />
 
-            <!--文字输入处-->
-            <EditText
-                android:id="@+id/find_edit"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="5"
-                android:textSize="20dp"
-                android:focusable="auto"
-                android:inputType="textPersonName"
-                android:hint="吐槽热词..."
-                android:text="" />
+        <!--搜索按钮-->
+        <ImageButton
+            android:id="@+id/find_button"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            app:srcCompat="@mipmap/find_button" />
 
-            <!--搜索按钮-->
-            <ImageButton
-                android:id="@+id/find_button"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_weight="1"
-                android:background="@color/white"
-                app:srcCompat="@mipmap/find_button" />
-
-        </LinearLayout>
-
+    </LinearLayout>
 
     <!--底部系统推荐热词-->
     <com.nex3z.flowlayout.FlowLayout
@@ -93,25 +82,9 @@
 
     </com.nex3z.flowlayout.FlowLayout>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-   <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <TextView
-=======
     <!--“我的”按钮-->
-=======
-
-<<<<<<< HEAD
->>>>>>> daac18980c649bbf9ac07d43f42a3e608d7a8a78
     <ImageButton
         android:id="@+id/mine_button"
->>>>>>> 1e535d6d0eb4ffe5e6701d68776938a7b6c204a7
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -121,20 +94,18 @@
         android:background="#00000000"
         app:srcCompat="@mipmap/mine" />
 
-<<<<<<< HEAD
-<!--    <Button-->
-<!--        android:id="@+id/button"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Button"-->
-<!--        tools:layout_editor_absoluteX="176dp"-->
-<!--        tools:layout_editor_absoluteY="476dp" />-->
+    <!--“发布”按钮-->
+    <ImageButton
+        android:id="@+id/crete_one_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="10dp"
+        android:background="#00000000"
+        app:srcCompat="@mipmap/new_one" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-    </RelativeLayout>
-
-=======
     <!--“分类”按钮-->
     <ImageButton
         android:id="@+id/classification_button"
@@ -148,58 +119,4 @@
         app:srcCompat="@mipmap/fenlei" />
 
 </RelativeLayout>
-=======
 
->>>>>>> e5ab191e9798d1b2bffccdf6e750b8130373272a
-
-
-<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    tools:context=".MainActivity">-->
-
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Hello World!"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/button"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Button"-->
-<!--        tools:layout_editor_absoluteX="176dp"-->
-<!--        tools:layout_editor_absoluteY="476dp" />-->
-
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
-<<<<<<< HEAD
-=======
-
-    <!--“我的”按钮-->
-    <ImageButton
-        android:id="@+id/mine_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="#00000000"
-        app:srcCompat="@mipmap/mine" />
->>>>>>> e5ab191e9798d1b2bffccdf6e750b8130373272a
-
-    <!--“我的”按钮-->
-
-<<<<<<< HEAD
-=======
-</RelativeLayout>
-
->>>>>>> e5ab191e9798d1b2bffccdf6e750b8130373272a
-
->>>>>>> 1e535d6d0eb4ffe5e6701d68776938a7b6c204a7
