--- a/app/src/main/res/layout/activity_increase_sort.xml
+++ b/app/src/main/res/layout/activity_increase_sort.xml
@@ -5,22 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".IncreaseSort"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
     <Button
         android:id="@+id/address"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textUri"
-        android:textSize="40sp"
-        android:hint="请输入分类图片的网址"
+        android:background="@mipmap/increasepicture"
+        android:layout_gravity="center"
+        android:alpha="0.5"
+        android:layout_marginTop="100dp"
         ></Button>
 
     <EditText
         android:id="@+id/sortname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="40dp"
+        android:paddingLeft="5dp"
         android:textSize="40sp"
         android:hint="请输入分类类名"
+        android:textColorHint="@color/sortpagetextcolor"
+        android:background="#00000000"
+        android:alpha="0.9"
+
         ></EditText>
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -31,8 +41,12 @@
         android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="提交"></Button>
+        android:layout_marginBottom="40dp"
+        android:text="提交"
+        android:textColorHint="@color/sortpagetextcolor"
+        android:textSize="20sp"
+        android:background="#00000000"
+        ></Button>
     </RelativeLayout>
 
 </LinearLayout>
