--- a/app/src/main/res/layout/activity_sort_page_next.xml
+++ b/app/src/main/res/layout/activity_sort_page_next.xml
@@ -4,26 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/pikaqiu1"
     android:orientation="vertical"
     tools:context=".SortPageNext">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+
         >
         <Button
             android:id="@+id/backbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="返回"
-            android:background="@color/bgcolor"
+            android:textSize="20sp"
+            android:background="#00000000"
             >
         </Button>
     </LinearLayout>
+
     <ListView
         android:id="@+id/listview"
+        android:alpha="0.9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#00000000"
         android:divider="@color/bgcolor">
 
     </ListView>
