--- a/app/src/main/res/layout/sortpagetext.xml
+++ b/app/src/main/res/layout/sortpagetext.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bgcolor">
+    android:background="#00000000">
 
     <TextView
         android:id="@+id/textview"
@@ -13,7 +13,6 @@
         android:textSize="30sp"
         android:textColor="@color/sortpagetextcolor"
         android:background="@color/sortpagebgcolor"
-        android:text="罗志祥"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="25dp"
