--- a/app/src/main/res/drawable/kind_shape.xml
+++ b/app/src/main/res/drawable/kind_shape.xml
@@ -1,4 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape>
-    <stroke ></stroke>
+<?xml version="1.0" encoding="UTF-8"?>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <!-- 填充的颜色 -->
+
+
+    <!-- android:radius 弧形的半径 -->
+    <!-- 设置按钮的四个角为弧形 -->
+    <corners
+        android:radius="20dip" />
+
+    <!--边界样式-->
+
+
+
+    <solid android:color="@color/white"></solid>
+    <!--也可单独设置-->
+    <!-- <corners -->
+    <!-- android:topLeftRadius="10dp"-->
+    <!-- android:topRightRadius="10dp"-->
+    <!-- android:bottomRightRadius="10dp"-->
+    <!--  android:bottomLeftRadius="10dp"-->
+    <!--   />  -->
+    **设置文字padding**
+    <!-- padding：Button里面的文字与Button边界的间隔 -->
+    <padding
+        android:left="40dp"
+        android:top="30dp"
+        android:right="40dp"
+        android:bottom="30dp"
+        />
 </shape>
