--- a/app/src/main/res/layout/activity_increase_sort.xml
+++ b/app/src/main/res/layout/activity_increase_sort.xml
@@ -6,7 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".IncreaseSort"
     android:orientation="vertical"
+
     >
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="返回"
+        android:textSize="20sp"
+        android:background="#00000000"
+        />
+
     <Button
         android:id="@+id/address"
         android:layout_width="wrap_content"
@@ -15,38 +26,37 @@
         android:background="@mipmap/increasepicture"
         android:layout_gravity="center"
         android:alpha="0.5"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         ></Button>
 
     <EditText
         android:id="@+id/sortname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="40dp"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:paddingLeft="5dp"
         android:textSize="40sp"
+        android:layout_marginTop="30dp"
         android:hint="请输入分类类名"
         android:textColorHint="@color/sortpagetextcolor"
-        android:background="#00000000"
-        android:alpha="0.9"
+        android:background="@drawable/hot_word_tag_shape"
+        android:alpha="0.9">
 
-        ></EditText>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="bottom">
+    </EditText>
 
     <Button
         android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="120dp"
+        android:background="@drawable/hot_word_tag_shape"
+        android:foreground="#00000000"
+        android:layout_gravity="center"
         android:text="提交"
         android:textColorHint="@color/sortpagetextcolor"
-        android:textSize="20sp"
-        android:background="#00000000"
-        ></Button>
-    </RelativeLayout>
+        android:textSize="20sp">
+
+    </Button>
 
 </LinearLayout>
