--- a/app/src/main/res/layout/sortpagetext.xml
+++ b/app/src/main/res/layout/sortpagetext.xml
@@ -11,8 +11,9 @@
         android:gravity="center"
         android:padding="10dp"
         android:textSize="30sp"
-        android:textColor="@color/sortpagetextcolor"
-        android:background="@color/sortpagebgcolor"
+        android:alpha="0.9"
+        android:textColor="@color/white"
+        android:background="@color/red"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="25dp"
